third commit: payment, order management, order detail

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -53,7 +53,7 @@
                     android:background="@color/white"
                     android:drawableLeft="@drawable/phone"
                     android:drawablePadding="20dp"
-                    android:inputType="textEmailAddress"
+                    android:inputType="textPassword"
                     android:paddingTop="20dp"
                     android:paddingBottom="20dp"
                     android:textColor="@color/black"
@@ -112,7 +112,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Tên"
+                    android:hint="Tên *"
                     android:textColorHint="@color/black"
                     app:boxStrokeColor="#000"
                     app:boxStrokeWidth="1dp"
