--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -19,7 +19,7 @@
             android:id="@+id/ivCate"
             android:layout_width="wrap_content"
             android:layout_height="120dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerInside"
             android:src="@drawable/product01" />
 
         <TextView
