--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -75,7 +75,6 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@color/btnLogin"
-            android:layout_margin="20dp"
             android:orientation="horizontal"/>
 
         <me.relex.circleindicator.CircleIndicator
@@ -90,7 +89,7 @@
             android:orientation="vertical"
             android:background="@color/btnLogin"
             android:gravity="center_horizontal"
-            android:padding="20dp">
+            android:paddingHorizontal="20dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -100,40 +99,51 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menuCard"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="90dp"
                     app:cardCornerRadius="20dp"
-                    app:cardBackgroundColor="@color/red"
                     android:layout_weight="1"
-                    android:layout_marginRight="20dp">
+                    android:layout_marginRight="20dp"
+                    app:cardBackgroundColor="@color/red">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/menu"
+                        android:layout_gravity="center_horizontal|top"
+                        android:layout_marginTop="5dp"/>
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Thực đơn"
                         android:fontFamily="@font/baloo"
                         android:textColor="@color/white"
                         android:textSize="20dp"
-                        android:layout_margin="25dp"
-                        android:textAlignment="center"/>
+                        android:layout_gravity="center_horizontal|bottom"/>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/discountCard"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="90dp"
                     app:cardCornerRadius="20dp"
                     android:background="@color/white"
                     android:layout_toEndOf="@+id/menuCard"
                     android:layout_weight="1"
                     app:cardBackgroundColor="@color/red">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/discount"
+                        android:layout_gravity="center_horizontal|top"
+                        android:layout_marginTop="5dp" />
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Khuyến mãi"
                         android:fontFamily="@font/baloo"
+                        android:textColor="@color/white"
                         android:textSize="20dp"
-                        android:layout_margin="25dp"
-                        android:textAlignment="center"
-                        android:textColor="@color/white"/>
+                        android:layout_gravity="center_horizontal|bottom"/>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
 
@@ -145,47 +155,68 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/orderCard"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="90dp"
                     app:cardCornerRadius="20dp"
                     android:background="@color/white"
                     android:layout_weight="1"
                     android:layout_marginRight="20dp"
                     app:cardBackgroundColor="@color/red">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/order"
+                        android:layout_gravity="center_horizontal|top"
+                        android:layout_marginTop="5dp" />
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Đơn hàng"
                         android:fontFamily="@font/baloo"
+                        android:textColor="@color/white"
                         android:textSize="20dp"
-                        android:layout_margin="25dp"
-                        android:textAlignment="center"
-                        android:textColor="@color/white"/>
+                        android:layout_gravity="center_horizontal|bottom"/>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/storeCard"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="90dp"
                     app:cardCornerRadius="20dp"
                     android:background="@color/white"
                     android:layout_toEndOf="@+id/menuCard"
                     android:layout_weight="1"
                     app:cardBackgroundColor="@color/red">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/store"
+                        android:layout_gravity="center_horizontal|top"
+                        android:layout_marginTop="5dp" />
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Cửa hàng"
                         android:fontFamily="@font/baloo"
+                        android:textColor="@color/white"
                         android:textSize="20dp"
-                        android:layout_margin="25dp"
-                        android:textAlignment="center"
-                        android:textColor="@color/white"/>
+                        android:layout_gravity="center_horizontal|bottom"/>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
         </LinearLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Món ăn bán chạy"
+            android:textAlignment="center"
+            android:fontFamily="@font/montserrat_bold"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_marginTop="10dp"/>
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcvCombo"
+            android:id="@+id/rcvProduct"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
