--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".controller.Login"
     android:background="@color/red"
-    android:id="@+id/layout">
+    android:id="@+id/layout"
+    android:fitsSystemWindows="true">
 
     <ImageView
         android:id="@+id/logo"
@@ -57,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:drawableLeft="@drawable/phone"
-                    android:text="0932977707"
+                    android:text="0398445870"
                     android:drawablePadding="20dp"
                     android:inputType="phone"
                     android:paddingTop="20dp"
@@ -104,7 +105,7 @@
                         android:layout_height="wrap_content"
                         android:background="@color/white"
                         android:drawablePadding="20dp"
-                        android:text="123456789"
+                        android:text="0398445870"
                         android:inputType="textPassword"
                         android:paddingTop="20dp"
                         android:paddingBottom="20dp"
