--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -85,6 +85,47 @@
             android:layout_alignBottom="@+id/profileProduct"
             android:layout_marginHorizontal="20dp"/>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:paddingVertical="5dp">
+
+            <ImageView
+                android:id="@+id/ivMinus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:layout_gravity="center"
+                android:background="@drawable/add_remove_bg"
+                android:src="@drawable/remove"
+                android:backgroundTint="@color/red"/>
+
+            <TextView
+                android:id="@+id/tvQuantity"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:padding="10dp"
+                android:background="@drawable/quantity_input_cart"
+                android:fontFamily="@font/baloo"
+                android:textColor="@color/black"
+                android:text="1"
+                android:textAlignment="center"
+                android:textSize="20dp" />
+
+            <ImageView
+                android:id="@+id/ivPlus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:layout_gravity="center"
+                android:background="@drawable/add_remove_bg"
+                android:src="@drawable/add"
+                android:backgroundTint="@color/red"/>
+
+        </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -105,17 +146,13 @@
             android:id="@+id/rcvReview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp">
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="100dp">
 
         </androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black"
-        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
