--- a/app/src/main/res/layout/ads_item.xml
+++ b/app/src/main/res/layout/ads_item.xml
@@ -3,15 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    app:cardCornerRadius="20dp"
-    android:layout_margin="20dp">
+    android:layout_height="200dp">
 
     <ImageView
         android:id="@+id/imAds"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/product01"
-        android:scaleType="centerCrop"/>
+        android:src="@drawable/ad01"
+        android:scaleType="fitXY"/>
 
 </androidx.cardview.widget.CardView>
