--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -22,7 +22,7 @@
             android:scaleType="fitXY"
             android:src="@drawable/product01"
             android:layout_weight="2"
-            android:background="@color/btnLogin"/>
+            android:background="@color/white"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
